manifests/02-calico-policies/tier-application/01-allow-cart-port-8080.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cart-port-8080
  namespace: default
  annotations:
    tigera.io/tier: application
spec:
  podSelector:
    matchLabels:
      app: cartservice
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
  policyTypes:
    - Ingress
