manifests/02-calico-policies/tier-application/03-allow-egress-stripe.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-egress-stripe
  annotations:
    tigera.io/tier: application
spec:
  selector: app == 'paymentservice'
  egress:
    - action: Allow
      protocol: TCP
      destination:
        fqdn: ["api.stripe.com"]
      ports: [443]
  types:
    - Egress
